# zVMC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
3Dprint/: zMod_enclosure.FCStd
3Dprint/STL/: zMod_enclosure-Button.stl  zMod_enclosure-Enclosure_Top.3mf  zMod_enclosure-Enclosure_Top.stl  zMod_enclosure-Enclosure_bottom.stl
PCB/: 2025-10-03 Comput.ods  README.md  fp-info-cache  fp-lib-table  sym-lib-table  zVMC_PCB.kicad_pcb  zVMC_PCB.kicad_prl  zVMC_PCB.kicad_pro  zVMC_PCB.kicad_sch
PCB/BOM/: zMod_PCB.csv  zMod_PCB.ods  zMod_PCB_Mouser.ods
PCB/Gerbers/v1.0/: zVMC_PCB-B_Cu.gbl  zVMC_PCB-B_Mask.gbs  zVMC_PCB-B_Paste.gbp  zVMC_PCB-B_Silkscreen.gbo  zVMC_PCB-Edge_Cuts.gm1  zVMC_PCB-F_Cu.gtl  zVMC_PCB-F_Mask.gts  zVMC_PCB-F_Paste.gtp  zVMC_PCB-F_Silkscreen.gto  zVMC_PCB-NPTH-drl_map.gbr  zVMC_PCB-NPTH.drl  zVMC_PCB-PTH-drl_map.gbr  zVMC_PCB-PTH.drl
PCB/screenshot/: Image editing.odg
drivers/: CMakeLists.txt  Kconfig.drivers  adsDriver.cpp  tempCluster.cpp  waterFlowMeasCluster.cpp  waterLevelMeasCluster.cpp  waterPressureMeasCluster.cpp
drivers/include/: adsDriver.h  tempCluster.h  waterFlowMeasCluster.h  waterLevelMeasCluster.h  waterPressureMeasCluster.h
external_converters/: zVMC.js
main/: AldesModus.h  CMakeLists.txt  Kconfig.main  Kconfig.projbuild  main.cpp  main.h
